# form-bot

./: .gitignore  LICENSE  README.md  client.py  models.py  pyproject.toml  requirements.txt
commands/: admin.py  forms.py  modals.py  pages.py  questions.py
database/: models.py  schema.sql
utils/: logger.py  responses.py  tables.py
views/: application.py  fill_out.py  send.py  starter.py
